--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -60,7 +60,7 @@ section {
     font-family:'MS Gothic';
 }
 
-.info-section, .news-section
+.info-section, .news-section, .albums-section
 {
     background-color: rgb(25,26,28);
 }
@@ -104,7 +104,7 @@ section {
     
 }
 
-.main-section-container button, .form-order button{
+.main-section-container .btn, .main-section-container button, .form-order button{
     background-color:transparent;
     border-color:rgb(102, 19, 35);
     border-radius:0%;
@@ -113,12 +113,19 @@ section {
     font-size:30px;
     
 }
-.main-section-container button:hover,
+.main-section-container .btn:hover, .main-section-container button:hover,
 .form-order button:hover
 {
     background-color:rgb(102, 19, 35);
     border-color:rgb(102, 19, 35);
     color:#000;
+}
+
+@media (max-width: 350px) {
+    .main-section-container .btn, .main-section-container button, .form-order button{
+    font-size:22px;
+    
+}
 }
 
 .section-title{
@@ -134,23 +141,24 @@ section {
 
 .info-section .container-content{
     max-width:1280px;
-    padding:0;
 }
 
 
 
 .about-us-title{
-    font-size:18pt;
+    font-size:18px;
     color:rgb(102, 19, 35);
 }
 .about-us-main-descr{
-    font-size:59pt;
+    font-size:60px;
     word-wrap: break-word;
 }
 
+
+
 .feedbacks{
-    margin: 3% auto;
-    font-size:30pt;
+    margin: 8% 1% auto;
+    font-size:30px;
 }
 
 .feedback{
@@ -168,6 +176,59 @@ section {
 .feedbacks .sign{
     padding-right:9%;
     text-align:right;
+}
+
+.feedbacks .row {
+    margin-right: 0;
+    margin-left: 0;
+}
+
+@media (max-width: 768px) {
+    .about-us {
+        /*padding-left:5%;
+        padding-right:5%;*/
+    }
+    .about-us-title {
+        /*padding-left:5%;
+        padding-right:5%;*/
+    }
+    .about-us-main-descr {
+        font-size: 50px;
+    }
+    .feedbacks{
+        font-size:28px;
+    }
+}
+
+@media (max-width: 656px) {
+    .about-us {
+    }
+    .about-us-title {
+    }
+    .about-us-main-descr {
+        font-size: 40px;
+    }
+    .feedbacks{
+        font-size:24px;
+    }
+}
+
+@media (max-width: 656px) and (max-height: 680) {
+    .about-us-main-descr {
+        font-size: 30px;
+    }
+    .feedbacks{
+        font-size:20px;
+    }
+}
+
+@media (max-width: 350px) {
+    .about-us-main-descr {
+        font-size: 24px;
+    }
+    .feedbacks{
+        font-size:20px;
+    }
 }
 
 .form-order{
@@ -216,12 +277,29 @@ section {
 }
 
 .address-text .title{
-    font-size:32pt;
+    font-size:48px;
     margin-bottom:1%;
 }
 
 .address-text .point{
-    font-size:22pt;
+    font-size:30px;
+}
+
+@media (max-width: 680px) {
+    .address-text .title{
+        font-size:28px;
+    }
+    .address-text .point{
+        font-size:20px;
+    }
+    .social-life{
+        max-height:20%;
+        max-width:98%;
+        margin: 0 auto;
+        padding-top:10%;
+        font-size:30px;
+        text-align:center;
+    }
 }
 
 .address-home{
@@ -235,6 +313,113 @@ section {
     padding-left:30%;
     padding-right:30%;
 }
+
+.news-section img{
+    height:95%;
+    width:100%;
+    background-size:cover;
+}
+.news-img-block{
+    float:left;
+    display:inline-block;
+    max-width:49%;
+    max-height:40%;
+    border:2px solid rgb(102, 19, 35);
+    position:relative;
+}
+
+.new-title{
+    font-size:48px;
+    margin-bottom:5%;
+    color:rgb(102, 19, 35);
+}
+
+.new-text{
+    font-size:24px;
+    text-align:left;
+}
+
+@media (max-width: 996px) {
+.new-title {
+    font-size: 28px;
+    margin-bottom: 2%;
+}
+.new-text{
+    font-size:20px;
+}
+}
+
+@media (max-width: 570px) {
+.new-title {
+    font-size: 22px;
+    margin-bottom: 2%;
+}
+.new-text{
+    font-size:16px;
+}
+}
+
+@media (max-width: 300px) {
+.new-title {
+    font-size: 18px;
+    margin-bottom: 2%;
+}
+.new-text{
+    font-size:14px;
+}
+}
+
+ .news-info-block{
+    position:absolute;
+    left:0;
+    top:0;
+    height:100%;
+    background-color: rgba(25,26,28, 0.95);
+    border-radius: 0;
+    width: 100%;
+    transition: all 0.3s cubic-bezier(0.4, 0, 1, 1) 0s;
+    display:none;
+ }
+ .news-info-block-hide{
+    left:136px;
+    top:215px;
+    height:10px;
+    background-color: rgba(0,0,0,0.0);
+    border-radius: 100%;
+    width: 10px;
+    opacity:0
+ }
+
+ .news-info-block-inner{
+    /*position:absolute;*/
+    /*top:25%;*/
+    margin: 0 auto;
+    padding:5% 2%;
+    text-align:center;
+    color:#ffffff;
+    /*min-width: 240px;
+    max-width: 240px;*/
+}
+
+ .albums-section img {
+    height: auto;
+    width: 100%;
+    background-size: cover;
+    border: 4px solid rgb(102, 19, 35);
+}
+
+ .albums-section .container-content{
+     padding-top:5%;
+ }
+ .albums-section .section-title{
+     padding-top:5%;
+     margin-bottom:5%;
+     text-align:center;
+     text-transform:uppercase;
+ }
+
+
+
 
 
 
