--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'app/font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
+    <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
 </head>
 
 <body>
