--- a/catalog/templates/catalog/album_detail.html
+++ b/catalog/templates/catalog/album_detail.html
@@ -8,31 +8,24 @@
         </div>
         <div class="container container-content">
             <div class="row albims-list">
+                {%for photo in object.photo_set.all%}
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                     <div class="album-title">
                         ковыне крыши
                     </div>
-                    <img src="{% static 'app/img/i1.jpg' %}" />
+                    <img class="fancybox" rel="gallery1" src="{% static 'app/img/i1.jpg' %}" />
                 </div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 accent-words">
-                    <div class="album-title">
-                        ковыне перила
-                    </div>
-                    <img src="{% static 'app/img/i2.jpg' %}" />
-                </div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                    <div class="album-title">
-                        кованая мебель
-                    </div>
-                    <img src="{% static 'app/img/i3.jpg' %}" />
-                </div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 accent-words">
-                    <div class="album-title">
-                        ограды
-                    </div>
-                    <img src="{% static 'app/img/i4.jpg' %}" />
-                </div>
+                {%endfor%}
             </div>
         </div>
     </section>
+
+    <script>
+    $(document).ready(function() {
+    $(".fancybox").fancybox({
+        openEffect	: 'none',
+        closeEffect	: 'none'
+    });
+    })
+</script>
 {% endblock %}
