--- a/catalog/templates/catalog/album_list.html
+++ b/catalog/templates/catalog/album_list.html
@@ -9,7 +9,7 @@
         <div class="container container-content">
             <div class="row albims-list">
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                    <a href="{{albums.0.get_absolute_url}}">
+                    <a href="{{object_list.0.get_absolute_url}}">
                         <div class="album-title">
                             ковыне крыши
                         </div>
