--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -12,6 +12,7 @@
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
     <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
     <script src="{% static 'app/scripts/jquery.fancybox.js' %}"></script>
+    <script src="{% static 'app/scripts/jquery.fancybox.pack.js' %}"></script>
 </head>
 
 <body>
@@ -45,7 +46,6 @@
 {% block content %}{% endblock %}
     </div>
 
-    <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
     <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
     <script src="{% static 'app/scripts/respond.js' %}"></script>
 {% block scripts %}{% endblock %}
