--- a/catalog/templates/catalog/album_list.html
+++ b/catalog/templates/catalog/album_list.html
@@ -1,40 +1,32 @@
 ﻿{% extends "app/layout.html" %}
+{% block breadcrumb%}
+<ol class="breadcrumb">
+    <li class="breadcrumb-item "><a href='/'>Главная</a></li>
+
+    <li class="breadcrumb-item active">Каталог</li>
+</ol>
+{% endblock %}
 
 {% block content %}
 {% load staticfiles %}
-    <section class="albums-section">
-        <div class="section-title">
-            наши работы
-        </div>
-        <div class="container container-content">
-            <div class="row albims-list">
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                    <a href="{{object_list.0.get_absolute_url}}">
-                        <div class="album-title">
-                            ковыне крыши
-                        </div>
-                        <img src="{% static 'app/img/i1.jpg' %}" />
-                    </a>
-                </div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 accent-words">
-                    <div class="album-title">
-                        ковыне перила
-                    </div>
-                    <img src="{% static 'app/img/i2.jpg' %}" />
-                </div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                    <div class="album-title">
-                        кованая мебель
-                    </div>
-                    <img src="{% static 'app/img/i3.jpg' %}" />
-                </div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 accent-words">
-                    <div class="album-title">
-                        ограды
-                    </div>
-                    <img src="{% static 'app/img/i4.jpg' %}" />
-                </div>
-            </div>
-        </div>
-    </section>
+<section class="albums-section">
+<div class="container container-content">
+<h1>
+    Наши работы
+</h1>
+    <div class="row albums-list">
+        {%for album in object_list%}
+<div class="card" style="width: 20rem;">
+    <img class="card-img-top" src="{{album.get_prewiew}}" alt="Card image cap">
+    <div class="card-block">
+        <h4 class="card-title">{{album.title}}</h4>
+        <p class="card-text">{{album.text }}</p>
+        <a href="{{album.get_absolute_url}}" class="btn btn-primary">Подробней</a>
+    </div>
+</div>
+{%endfor%}
+
+    </div>
+</div>
+</section>
 {% endblock %}
