--- a/catalog/templates/catalog/album_list.html
+++ b/catalog/templates/catalog/album_list.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 {% load staticfiles %}
-<section class="albums-section">
+<section class="albums-section" id="albums-section">
 <div class="container container-content">
 <h1>
     Наши работы
