--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -60,6 +60,7 @@ section {
 
 .main-section{
     font-family:'MS Gothic';
+    padding-top: 40px;
 }
 
 .info-section, .news-section 
@@ -80,10 +81,26 @@ section {
     color:#fff
 }
 
+.navbar__phone a{
+    color:inherit;
+    text-decoration: none;
+}
+
+.navbar__phone a:hover{
+    color: #fed480;
+    text-decoration: none;
+}
+
+.navbar__phone a:visited, .navbar__phone a:focus, .navbar__phone a:active{
+    color: inherit;
+    text-decoration: none;
+}
+
 .main-section-container{
     color:rgb(102, 19, 35);
     max-width: 100%;
     height:450px;
+    /*padding-top:40px;*/
 }
 
 .main-section-info{
@@ -105,7 +122,7 @@ section {
     
 }
 
-.main-section-container .btn, .main-section-container button, {
+.main-section-container .btn, .main-section-container button{
     background-color:transparent;
     border-color:rgb(102, 19, 35);
     border-radius:0%;
@@ -137,6 +154,7 @@ section {
 
 .container-content{
     color:#fff;
+    /*padding-top:40px;*/
 }
 
 .info-section .container-content{
@@ -271,18 +289,17 @@ section {
     max-height:20%;
     max-width:98%;
     margin: 0 auto;
-    padding-top:10%;
     font-size:32pt;
     text-align:center;
 }
 
-.address-text .title{
-    font-size:28px;
+.address-text .title, .phone .title{
+    font-size:40px;
     margin-bottom:1%;
 }
 
-.address-text .point{
-    font-size:30px;
+.address-text .point, .phone .point{
+    font-size:28px;
 }
 
 @media (max-width: 680px) {
@@ -317,7 +334,8 @@ section {
 }
 
 .news-section img{
-    height:95%;
+    height:auto;
+    max-height:80%;
     width:100%;
     background-size:cover;
 }
@@ -453,8 +471,9 @@ margin:30px
 
 
 .albums-list .card {
-background-color: #292b2c;
-margin:15px
+    background-color: #292b2c;
+    margin:15px;
+    float:left;
 }
 
 .breadcrumb{
@@ -512,4 +531,9 @@ border-color: rgb(102, 19, 35);
 .btn-primary:hover{
 background-color: #060606;
 border-color: rgb(102, 19, 35);
+}
+
+.form-control:focus{
+    background-color:rgba(0,0,0,0.8);
+    color:#fff;
 }
