--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -169,6 +169,46 @@
         }
         )
 
+
+$('#main-navbar a').each(function () {
+    $(this).attr('href',$(this).attr('href').substring(1));
+});
+
+$('.navbar-nav a[href^="#"]').on('click', function (e) {
+      e.preventDefault();
+        $(document).off("scroll");
+         $('a').each(function () {
+            $(this).removeClass('active');
+        })
+        $(this).addClass('active');
+         var target = this.hash,
+         menu = target;
+         $target = $(target);
+       $('html, body').stop().animate({
+            'scrollTop': $target.offset().top-$('.navbar-header').height()
+        }, 600, 'swing', function () {
+            $(document).on("scroll", onScroll);
+        });
+    });
+
+
+
+function onScroll(event){
+    var scrollPos = $(document).scrollTop();
+    $('#main-navbar a').each(function () {
+        var currLink = $(this);
+       var refElement = $(currLink.attr("href"));
+        if (refElement.position().top <= scrollPos && refElement.position().top + refElement.height() > scrollPos) {
+            $('#main-navbar ul li a').removeClass("active");
+            currLink.addClass("active");
+        }
+        else{
+            currLink.removeClass("active");
+        }
+    });
+}
+    
+
     </script>
 
     {% endblock %}
