--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -7,6 +7,23 @@ body {
     background-color:rgb(3,3,3);
 }
 
+@font-face {
+    font-family: "OdessaScript";
+    src: url("/static/app/fonts/7fonts.ru_odessa_script_cursive.TTF") format("truetype");
+
+
+    /*font-family: "OdessaScript";
+	src: url("/static/app/fonts/OdessaScript.eot");
+	src: url("/static/app/fonts/OdessaScript.eot#iefix") format("embedded-opentype"),
+	url("/static/app/fonts/OdessaScript.woff") format("woff"),
+	url("/static/app/fonts/OdessaScript.ttf") format("truetype"),
+	url("/static/app/fonts/OdessaScript.svg") format("svg");
+	font-weight: normal;
+	font-style: normal;*/
+}
+
+
+
 /* Set padding to keep content from hitting the edges */
 /*.body-content {
     padding-left: 15px;
@@ -59,9 +76,86 @@ section {
 }
 
 .main-section{
-    font-family:'MS Gothic';
-    padding-top: 40px;
+    /*font-family:'MS Gothic';*/
+    /*padding-top: 40px;*/
+    display:flex;
 }
+
+.main-section-block{
+    float:left;
+    padding:10px;
+    width:99%;
+    
+}
+.main-text{
+    float:left;
+    margin-right:100px;
+    max-width:50%;
+    
+}
+
+
+
+.main-text, .main-contacts{
+     /*padding:5px 5px 5px 50px;*/
+     /*max-width:35%;*/
+}
+
+.main-text-title{
+    padding-left:200px;
+}
+
+.main-contacts{
+    float:right;
+    margin-left:100px;
+    text-align:right;
+    /*color:#fff;*/
+    max-width:50%;
+    /*text-transform: uppercase;*/
+    /* font-family: 'El Messiri', sans-serif; */
+    font-family: 'OdessaScript', 'El Messiri', sans-serif;
+    /*font-style: italic;*/
+    /*letter-spacing: 20px;*/
+    color: rgb(102, 19, 35);
+   
+}
+
+.main-tel{
+    font-size: 80px;
+    
+    text-shadow: 0px 0px 2px #FFFFFF, 0px 0px 4px #ffffde;
+    /* text-shadow: 0px 0px 4px #fed480, 0px 0px 16px #fed480; */
+}
+
+.main-email{
+     font-size: 60px;
+     text-shadow: 0px 0px 1px #FFFFFF, 0px 0px 2px #ffffde;
+ }
+
+.our-name{
+    /*top: 20px;
+    left: 100px;*/
+    font-size: 120px;
+    text-transform: uppercase;
+    /*font-family: 'El Messiri', sans-serif;*/
+    font-family: 'OdessaScript', 'El Messiri', sans-serif;
+    font-style: italic;
+    letter-spacing: 20px;
+    color: rgb(102, 19, 35);
+    text-shadow: 0px 0px 4px #FFFFFF, 0px 0px 16px #ffffde;
+    /*text-shadow: 0px 0px 4px #fed480, 0px 0px 16px #fed480;*/
+    
+}
+
+.our-name-descr{
+    font-size: 30px;
+    font-family: 'OdessaScript', 'El Messiri', sans-serif;
+    font-style: italic;
+    letter-spacing: 2px;
+    color: #fff;
+    text-shadow: 0px 0px 4px rgb(102, 19, 35), 0px 0px 16px rgb(102, 19, 35);
+}
+
 
 .info-section, .news-section 
 {
@@ -122,7 +216,8 @@ section {
     
 }
 
-.main-section-container .btn, .main-section-container button{
+.main-section-container .btn, .main-section-container button,
+ .main-text .btn, .main-text button{
     background-color:transparent;
     border-color:rgb(102, 19, 35);
     border-radius:0%;
@@ -132,7 +227,7 @@ section {
     
 }
 .main-section-container .btn:hover, .main-section-container button:hover,
-.form-order button:hover
+.form-order button:hover, .main-text .btn:hover
 {
     background-color:rgb(102, 19, 35);
     border-color:rgb(102, 19, 35);
@@ -168,8 +263,9 @@ section {
     color:rgb(102, 19, 35);
 }
 .about-us-main-descr{
-    font-size:60px;
+    font-size:28px;
     word-wrap: break-word;
+    text-align: center;
 }
 
 
@@ -257,6 +353,28 @@ section {
    
 }
 
+.main-text .form-order{
+    margin-top: 100px;
+    width: 50%;
+    height: 50%;
+    margin-left:40px;
+}
+
+.main-text .form-order .modal-header{
+   border-bottom: none;
+   text-align: right;
+   font-style:italic;
+   color:#fff;
+    font-family: 'OdessaScript', 'El Messiri', sans-serif;
+}
+
+.main-text .form-order .btn{
+    font-size:24px;
+    font-family: 'OdessaScript', 'El Messiri', sans-serif;
+}
+
+
+
 .form-order textarea {
     resize:none;
 }
@@ -333,12 +451,23 @@ section {
     padding-right:30%;
 }
 
-.news-section img{
+.news-section img, .info-section img{
     height:auto;
     max-height:80%;
     width:100%;
     background-size:cover;
 }
+
+.info-section .card{
+    transform: scale(1,1);
+    transition: all 2s;
+}
+
+.info-section .card:hover{
+    transform: scale(1.2,1.2);
+    transition: all 2s;
+}
+
 .news-img-block{
     float:left;
     display:inline-block;
