--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'app/font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/jquery.fancybox.css' %}" />
+    <link href="https://fonts.googleapis.com/css?family=El+Messiri" rel="stylesheet">
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
     <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
     <script src="{% static 'app/scripts/jquery.fancybox.js' %}"></script>
@@ -27,6 +28,9 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item go">
                 <a class="nav-link" href="/#main-section">Главная</a>
+            </li>
+            <li class="nav-item go">
+                <a class="nav-link" href="/#info-section">Наши работы</a>
             </li>
             <li class="nav-item go">
                 <a class="nav-link" href="/#order-section">Заказ</a>
